tests/ui/fail/empty_call.stderr
error: Unexpected end of macro invocation
 --> tests/ui/fail/empty_call.rs:4:1
  |
4 | #[expandable::expr]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `expandable::expr` (in Nightly builds, run with -Z macro-backtrace for more info)
